change mobile version

--- a/index.html
+++ b/index.html
@@ -70,8 +70,30 @@
 				<img src="images/logo/logo_1.png" class="logo-img" alt="">
 			</div>
 			<div class="menu">
-				<a href="">About Us</a>
-				<a href="">Blog</a>
+				<div class="menuWrapper">
+					<div class="logo-mobile">
+						<img src="images/logo/logo_1.png" class="logo-img-mobile" alt="">
+						<div class="close-div">
+							<span></span>
+							<span></span>
+						</div>
+					</div>
+					<div class="decore_4"></div>
+					<a href="" class="right">About Us</a>
+					<a href="">Blog</a>
+					<button class="btn1-mobile">Sign up now - It’s Free</button>
+					<div class="icons-mobile">
+						<img src="images/icons/in.png" alt="in" class="icon-mb">
+						<img src="images/icons/instagram.png" alt="instagram" class="icon-mb">
+						<img src="images/icons/facebook.png" alt="facebook" class="icon-mb">
+						<img src="images/icons/twitter.png" alt="twitter" class="icon-mb">
+					</div>
+				</div>
+			</div>
+			<div class="menu_btn">
+				<span></span>
+				<span></span>
+				<span></span>
 			</div>
 		</div>
 		<a href="" class="btn1">Sign up now - It’s Free</a>
@@ -80,7 +102,7 @@
 			<!-- section 1 --------------------------------------------- -->
 			<div class="section section-one">
 				<div class="row h-100">
-					<div class="sec1 col-xl-6 col-12 d-flex align-items-start flex-column justify-content-center">
+					<div class="sec1 col-xl-6 col-lg-6 display_f2">
 						<div class="Rectangle-364"></div>
 						<h1 class="title1">A NEW APPROACH<br> 
 							TO BANKING</h1>
@@ -91,7 +113,7 @@
 						<h3>Be the <b>master</b> of your finances.</h3>
 						<!-- <a href="" class="btn1">Sign up now - It’s Free</a> -->
 					</div>
-					<div class="col-xl-6 col-12 d-flex align-items-center justify-content-end position-relativ" style="padding-right: 110px;">
+					<div class="col-xl-6 col-lg-6 display_f">
 						<div class="section-img">
 							<p class="Lets-Finin">Let’s Finin</p>
 							<img src="images/section-images/3.png" width="250px" alt="" style="    position: relative; z-index: 3;">
@@ -100,6 +122,7 @@
 								<img src="images/section-images/Group 920.png" alt="">
 								<img src="images/section-images/Group 915.png" alt="">
 							</div>
+							<div class="mobile"></div>
 						</div>
 						<img src="images/decore/decore_1.png" alt="" class="d1">				
 					</div>
@@ -109,7 +132,7 @@
 			<!-- section 2 --------------------------------------------- -->
 			<div class="section section-two">
 				<div class="row h-100">
-					<div class="sec1 col-xl-6 col-12 d-flex align-items-start flex-column justify-content-center">
+					<div class="sec1 col-xl-6 col-lg-6 display_f2">
 						<div class="Rectangle-364"></div>
 						<h1 class="title1">SUPERB<br> SAVINGS</h1>
 						<p class="text1">
@@ -120,7 +143,7 @@
 						<h3>No catches, <b>That’s a promise.</b></h3>
 						<!-- <a href="" class="btn1">Sign up now - It’s Free</a> -->
 					</div>
-					<div class="col-xl-6 col-12 d-flex align-items-center justify-content-end position-relative" style="padding-right: 110px;">
+					<div class="col-xl-6 col-lg-6 display_f">
 						<div class="section-img">
 							<p class="Lets-Finin">Smart Savings Account</p>
 							<img src="images/section-images/2.png" width="250px" alt="" style="    position: relative; z-index: 3;">
@@ -129,6 +152,7 @@
 								<img src="images/section-images/Group 885.png" alt="" style="margin: -50px 0 0 145px;">
 								<img src="images/section-images/Group 918.png" alt="" style="margin-top: -20px;">
 							</div>
+							<div class="mobile"></div>
 						</div>
 						<img src="images/decore/decore_2.png" alt="" class="d1 sec2_d1">				
 					</div>
@@ -138,7 +162,7 @@
 			<!-- section 3 --------------------------------------------- -->
 			<div class="section section-three">
 				<div class="row h-100">
-					<div class="sec1 col-xl-6 col-12 d-flex align-items-start flex-column justify-content-center">
+					<div class="sec1 col-xl-6 col-lg-6 display_f2">
 						<div class="Rectangle-364"></div>
 						<h1 class="title1">ONE APP. <br>
 								FOR ALL YOUR <br>
@@ -151,7 +175,7 @@
 						<h3>And that’s just the <b>Beginning.</b></h3>
 						<!-- <a href="" class="btn1">Sign up now - It’s Free</a> -->
 					</div>
-					<div class="col-xl-6 col-12 d-flex align-items-center justify-content-end position-relative" style="padding-right: 110px;">
+					<div class="col-xl-6 col-lg-6 display_f">
 						<div class="section-img">
 							<p class="Lets-Finin">SynCard</p>
 							<img src="images/section-images/1.png" width="250px" alt="" style="    position: relative; z-index: 3;">
@@ -159,6 +183,7 @@
 								<img src="images/section-images/Group 843.png" alt="">
 								<img src="images/section-images/Group 915.png" alt="" style="margin-top: -20px;">
 							</div>
+							<div class="mobile"></div>
 						</div>
 						<img src="images/decore/decore_2.png" alt="" class="d1 sec3_d1">				
 					</div>
@@ -168,7 +193,7 @@
 			<!-- section 4 --------------------------------------------- -->
 			<div class="section section-four">
 				<div class="row h-100">
-					<div class="sec1 col-xl-6 col-12 d-flex align-items-start flex-column justify-content-center">
+					<div class="sec1 col-xl-6 col-lg-6 display_f2">
 						<div class="Rectangle-364"></div>
 						<h1 class="title1">Be the Master of <br>
 								Your Finances</h1>
@@ -182,7 +207,7 @@
 						<h3>Always a <b>Step Ahead.</b></h3>
 						<!-- <a href="" class="btn1">Sign up now - It’s Free</a> -->
 					</div>
-					<div class="col-xl-6 col-12 d-flex align-items-center justify-content-end position-relative" style="padding-right: 110px;">
+					<div class="col-xl-6 col-lg-6 display_f">
 						<div class="section-img">
 							<p class="Lets-Finin">SynCard</p>
 							<img src="images/section-images/4.png" width="250px" alt="" style="    position: relative; z-index: 3;">
@@ -190,6 +215,7 @@
 								<img src="images/section-images/Group 846.png" alt="">
 								<img src="images/section-images/Group 868.png" alt="" style="margin: -48px 0 0 86px;">
 							</div>
+							<div class="mobile"></div>
 						</div>
 						<img src="images/decore/decore_3.png" alt="" class="d1 sec3_d1">				
 					</div>
