change mobile version

--- a/index.html
+++ b/index.html
@@ -55,6 +55,9 @@
 					<li data-menuanchor="fourthSection">
 						<a href="#fourthSection"></a>
 					</li>
+					<li data-menuanchor="fifthhSection">
+						<a href="#fifthhSection"></a>
+					</li>
 				</ul>
 				<div class="icons">
 					<img src="images/icons/in.png" alt="in" class="icon">
@@ -220,6 +223,39 @@
 						<img src="images/decore/decore_3.png" alt="" class="d1 sec3_d1">				
 					</div>
 				</div>	
+			</div>
+
+			<!-- section 5 --------------------------------------------- -->
+			<div class="section section-five">
+				<div class="row h-100">
+					<div class="sec1 col-xl-6 col-lg-6 display_f2">
+						<div class="Rectangle-364"></div>
+						<h1 class="title1">
+							MANY WAYS <br>
+							TO SAVE
+							</h1>
+						<p class="text1">
+							We get it. Saving money is easier said than done. <br>
+							With Finin’s STASH, savings are painless and enjoyable. <br>
+							Time to steer away from your fears, <br>
+							be it recessions or health emergencies.			
+						</p>
+						<h3>Be financially <b>Independent.</b></h3>
+						<!-- <a href="" class="btn1">Sign up now - It’s Free</a> -->
+					</div>
+					<div class="col-xl-6 col-lg-6 display_f">
+						<div class="section-img">
+							<p class="Lets-Finin">Finin Stash</p>
+							<img src="images/section-images/5.png" width="250px" alt="" style="    position: relative; z-index: 3;">
+							<div class="imgs sec5_imgs">
+								<img src="images/section-images/Group 871.png" alt="">
+								<img src="images/section-images/Group 875.png" alt="" style="margin: -48px 0 0 46px;">
+							</div>
+							<div class="mobile"></div>
+						</div>
+						<img src="images/decore/decore_3.png" alt="" class="d1 sec3_d1">				
+					</div>
+				</div>
 			</div>
 		</div>
 	</div>
