--- a/index.html
+++ b/index.html
@@ -101,7 +101,37 @@
 		</div>
 		<a href="" class="btn1">Sign up now - It’s Free</a>
 
-		<div id="fullpage">
+		<div class="modal_singl-up">
+			<div class="modal-wrapper">
+				<div class="close-div sign_close">
+					<span></span>
+					<span></span>
+				</div>
+				<div class="row">
+					<div class="col-xl-6 col-lg-6">
+						<div class="Rectangle-364"></div>
+						<h1 class="title1" style="text-transform: inherit">Get your free account</h1>
+						<p class="text1" style="font-size: 14px">Book your spot now and get updated with our new upcoming <br>
+							features and info about product.</p>
+
+						<div class="input_wrapper">
+							<input type="text" id="name" name="name" placeholder="Your name" class="inp_form">
+							<input type="email" id="mail" name="mail" placeholder="example@email.com" class="inp_form">
+							<div class="phone_inp inp_form">
+								<input type="text" id="code" class="phone_code" value="+91">
+								<input type="text" id="phone" name="" class="phone" placeholder="00 00 000 000">
+							</div>
+							<button class="sub">Subscribe</button>
+						</div>
+					</div>
+					<div class="col-xl-6 col-lg-6" style="padding-right: 135px;">
+						<img src="images/section-images/singn.png" class="w-100 img_a" alt="">
+					</div>
+				</div>
+			</div>
+		</div>
+
+		<div id="fullpage" class="full">
 			<!-- section 1 --------------------------------------------- -->
 			<div class="section section-one">
 				<div class="row h-100">
